add background and header

--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <link rel="icon" type="image/png" href="ping-pong.png" />
 </head>
 <body>
+    <div class="header">
+        <h1>ASJ Tennis de Table</h1>
+    </div>
 
 
 
-    
+
 
 
 
